[gd_scene load_steps=101 format=2]

[ext_resource path="res://scenes/scripts/Menu_Init.gd" type="Script" id=1]
[ext_resource path="res://fonts/button_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/img/back_green.jpg" type="Texture" id=3]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_attack2.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_climb0.png" type="Texture" id=5]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_climb1.png" type="Texture" id=6]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_attack0.png" type="Texture" id=7]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_walk3.png" type="Texture" id=8]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_cheer1.png" type="Texture" id=9]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_cheer0.png" type="Texture" id=10]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_attack1.png" type="Texture" id=11]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_shove.png" type="Texture" id=12]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_back.png" type="Texture" id=13]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_behindBack.png" type="Texture" id=14]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_walk1.png" type="Texture" id=15]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_walk5.png" type="Texture" id=16]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_back.png" type="Texture" id=17]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_walk4.png" type="Texture" id=18]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_show.png" type="Texture" id=19]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_slide.png" type="Texture" id=20]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_fallDown.png" type="Texture" id=21]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_cheer0.png" type="Texture" id=22]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_behindBack.png" type="Texture" id=23]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_walk2.png" type="Texture" id=24]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_slide.png" type="Texture" id=25]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_attackKick.png" type="Texture" id=26]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_hit.png" type="Texture" id=27]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_rope.png" type="Texture" id=28]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_walk6.png" type="Texture" id=29]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_attack2.png" type="Texture" id=30]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_walk7.png" type="Texture" id=31]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_down.png" type="Texture" id=32]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_climb0.png" type="Texture" id=33]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_shoveBack.png" type="Texture" id=34]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_climb1.png" type="Texture" id=35]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_fallDown.png" type="Texture" id=36]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_hurt.png" type="Texture" id=37]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_duck.png" type="Texture" id=38]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_cheer1.png" type="Texture" id=39]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_fall.png" type="Texture" id=40]
[ext_resource path="res://resources/sprites/Player2/character_maleAdventurer_hang.png" type="Texture" id=41]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_fallDown.png" type="Texture" id=42]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_down.png" type="Texture" id=43]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_slide.png" type="Texture" id=44]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_kick.png" type="Texture" id=45]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_hold.png" type="Texture" id=46]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_back.png" type="Texture" id=47]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_hang.png" type="Texture" id=48]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_cheer1.png" type="Texture" id=49]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_fall.png" type="Texture" id=50]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_hit.png" type="Texture" id=51]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_attackKick.png" type="Texture" id=52]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_rope.png" type="Texture" id=53]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_cheer0.png" type="Texture" id=54]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_hurt.png" type="Texture" id=55]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_interact.png" type="Texture" id=56]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_hit.png" type="Texture" id=57]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_jump.png" type="Texture" id=58]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_shoveBack.png" type="Texture" id=59]
[ext_resource path="res://resources/sprites/Player1/character_femaleAdventurer_behindBack.png" type="Texture" id=60]
[ext_resource path="res://resources/sprites/Player4/character_femalePerson_hang.png" type="Texture" id=61]
[ext_resource path="res://resources/sprites/Player3/zombie_walk2.png" type="Texture" id=62]
[ext_resource path="res://resources/sprites/Player3/zombie_walk1.png" type="Texture" id=63]
[ext_resource path="res://resources/sprites/Player3/zombie_action2.png" type="Texture" id=64]
[ext_resource path="res://resources/sprites/Player3/zombie_climb2.png" type="Texture" id=65]
[ext_resource path="res://resources/sprites/Player3/zombie_slide.png" type="Texture" id=66]
[ext_resource path="res://resources/sprites/Player3/zombie_back.png" type="Texture" id=67]
[ext_resource path="res://resources/sprites/Player3/zombie_kick.png" type="Texture" id=68]
[ext_resource path="res://resources/sprites/Player3/zombie_cheer1.png" type="Texture" id=69]
[ext_resource path="res://resources/sprites/Player3/zombie_idle.png" type="Texture" id=70]
[ext_resource path="res://resources/sprites/Player3/zombie_duck.png" type="Texture" id=71]
[ext_resource path="res://resources/sprites/Player3/zombie_skid.png" type="Texture" id=72]
[ext_resource path="res://resources/sprites/Player3/zombie_jump.png" type="Texture" id=73]
[ext_resource path="res://resources/sprites/Player3/zombie_climb1.png" type="Texture" id=74]
[ext_resource path="res://resources/sprites/Player3/zombie_cheer2.png" type="Texture" id=75]
[ext_resource path="res://resources/sprites/Player3/zombie_action1.png" type="Texture" id=76]
[ext_resource path="res://resources/sounds/main_menu.mp3" type="AudioStream" id=77]
[ext_resource path="res://resources/sounds/pluck_002.ogg" type="AudioStream" id=78]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.976471, 0.984314, 0.0196078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.890196, 1, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.87451, 1, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=13]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.980392, 1, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 60 ) ],
"loop": true,
"name": "front",
"speed": 10.0
}, {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "back",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 54 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 48 ), ExtResource( 56 ), ExtResource( 58 ), ExtResource( 45 ) ],
"loop": true,
"name": "dancing_init",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 55 ), ExtResource( 53 ), ExtResource( 59 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 20 ), ExtResource( 32 ), ExtResource( 21 ) ],
"loop": true,
"name": "dancing_choose",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=16]
radius = 21.0
height = 28.0

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "back",
"speed": 25.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 22 ), ExtResource( 39 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 25 ) ],
"loop": true,
"name": "dance_init",
"speed": 2.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 22 ), ExtResource( 39 ), ExtResource( 27 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 30 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 17 ), ExtResource( 37 ), ExtResource( 35 ), ExtResource( 33 ) ],
"loop": true,
"name": "dance_choose",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=18]
radius = 39.0

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "front",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "back",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 38 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 42 ) ],
"loop": true,
"name": "dancing_init",
"speed": 2.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 52 ), ExtResource( 61 ), ExtResource( 57 ) ],
"loop": true,
"name": "dancing_choose",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=20]
radius = 30.0
height = 26.0

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ ExtResource( 70 ) ],
"loop": true,
"name": "front",
"speed": 5.0
}, {
"frames": [ ExtResource( 67 ) ],
"loop": true,
"name": "back",
"speed": 1.0
}, {
"frames": [ ExtResource( 70 ), ExtResource( 69 ), ExtResource( 75 ), ExtResource( 64 ), ExtResource( 76 ), ExtResource( 71 ), ExtResource( 62 ) ],
"loop": true,
"name": "dancing_init",
"speed": 3.0
}, {
"frames": [ ExtResource( 70 ), ExtResource( 68 ), ExtResource( 72 ), ExtResource( 66 ), ExtResource( 63 ), ExtResource( 62 ), ExtResource( 73 ), ExtResource( 67 ), ExtResource( 65 ), ExtResource( 74 ) ],
"loop": true,
"name": "dancing_choose",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=22]
radius = 29.0
height = 34.0

[node name="Menu_Init" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0
margin_bottom = -5.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 5.0
margin_right = 600.0
margin_bottom = 405.0
rect_scale = Vector2( 1.6, 1.35 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_first" type="Label" parent="."]
margin_left = 325.105
margin_top = 104.0
margin_right = 438.105
margin_bottom = 128.0
rect_scale = Vector2( 3, 3.5 )
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "EDUCATIVO"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_second" type="Label" parent="."]
margin_left = 383.105
margin_top = 25.0
margin_right = 456.105
margin_bottom = 49.0
rect_scale = Vector2( 3, 3.5 )
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "JUEGO"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Container" type="VBoxContainer" parent="."]
anchor_left = 0.172
anchor_top = 0.334
anchor_right = 0.661
anchor_bottom = 0.384
margin_top = -0.250015
margin_bottom = 63.1
rect_scale = Vector2( 1.4, 2 )
theme = SubResource( 2 )
custom_constants/separation = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Button_Container"]
margin_top = 3.0
margin_right = 469.0
margin_bottom = 21.0
focus_neighbour_top = NodePath("../QuitButton")
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "1. Jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigButton" type="Button" parent="Button_Container"]
margin_top = 25.0
margin_right = 469.0
margin_bottom = 43.0
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.847059, 1, 0, 1 )
text = "2. Configuración"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutUsButton" type="Button" parent="Button_Container"]
margin_top = 47.0
margin_right = 469.0
margin_bottom = 65.0
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.87451, 1, 0, 1 )
text = "3. Sobre Nosotros"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Button_Container"]
margin_top = 69.0
margin_right = 469.0
margin_bottom = 87.0
focus_neighbour_bottom = NodePath("../PlayButton")
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.886275, 0.996078, 0, 1 )
text = "4. Salir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Area2D" parent="."]
position = Vector2( 94.381, -337.252 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite_Player1" type="AnimatedSprite" parent="Player1"]
position = Vector2( 270, 384 )
scale = Vector2( 0.752604, 0.695312 )
frames = SubResource( 15 )
animation = "dancing_init"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2( 271, 398 )
shape = SubResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="Player2" type="Area2D" parent="."]
position = Vector2( 578.734, -2.11113 )
scale = Vector2( 1.4, 1.4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite_Player2" type="AnimatedSprite" parent="Player2"]
position = Vector2( 195, 254 )
frames = SubResource( 17 )
animation = "dance_init"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2( 200, 269 )
shape = SubResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="Player4" type="Area2D" parent="."]
position = Vector2( -252.74, -485.133 )
scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite_Player4" type="AnimatedSprite" parent="Player4"]
position = Vector2( 227, 567 )
frames = SubResource( 19 )
animation = "dancing_init"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player4"]
position = Vector2( 228, 587 )
shape = SubResource( 20 )

[node name="Player5" type="Area2D" parent="."]
position = Vector2( 8.47229, 268.286 )
scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite_Player3" type="AnimatedSprite" parent="Player5"]
position = Vector2( 222, 113 )
frames = SubResource( 21 )
animation = "dancing_init"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player5"]
position = Vector2( 212, 123 )
shape = SubResource( 22 )

[node name="MainMenuSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 77 )

[node name="OptionSelected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 78 )

[connection signal="pressed" from="Button_Container/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Button_Container/ConfigButton" to="." method="_on_ConfigButton_pressed"]
[connection signal="pressed" from="Button_Container/AboutUsButton" to="." method="_on_AboutUsButton_pressed"]
[connection signal="pressed" from="Button_Container/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="finished" from="OptionSelected" to="." method="_on_OptionSelected_finished"]
